--- a/page2.html
+++ b/page2.html
@@ -1,344 +1,14 @@
+<!-- Second page for Q4 (page2.html) -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 2 - Secondary Page</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 20px;
-        line-height: 1.6;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        color: white;
-        min-height: 100vh;
-      }
-
-      .container {
-        max-width: 800px;
-        margin: 0 auto;
-        padding: 40px 20px;
-        text-align: center;
-      }
-
-      h1 {
-        font-size: 3em;
-        margin-bottom: 20px;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        animation: fadeInUp 1s ease-out;
-      }
-
-      h2 {
-        font-size: 1.5em;
-        margin-bottom: 30px;
-        opacity: 0.9;
-        animation: fadeInUp 1s ease-out 0.3s both;
-      }
-
-      .welcome-box {
-        background: rgba(255, 255, 255, 0.1);
-        border-radius: 15px;
-        padding: 30px;
-        margin: 30px 0;
-        backdrop-filter: blur(10px);
-        border: 1px solid rgba(255, 255, 255, 0.2);
-        animation: fadeInUp 1s ease-out 0.6s both;
-      }
-
-      .nav-links {
-        margin: 40px 0;
-        animation: fadeInUp 1s ease-out 0.9s both;
-      }
-
-      .nav-links a {
-        display: inline-block;
-        background: rgba(255, 255, 255, 0.2);
-        color: white;
-        text-decoration: none;
-        padding: 12px 25px;
-        margin: 10px;
-        border-radius: 25px;
-        border: 2px solid rgba(255, 255, 255, 0.3);
-        transition: all 0.3s ease;
-        font-weight: bold;
-      }
-
-      .nav-links a:hover {
-        background: rgba(255, 255, 255, 0.3);
-        transform: translateY(-2px);
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-      }
-
-      .image-gallery {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 20px;
-        margin: 40px 0;
-        animation: fadeInUp 1s ease-out 1.2s both;
-      }
-
-      .image-card {
-        background: rgba(255, 255, 255, 0.1);
-        border-radius: 10px;
-        padding: 15px;
-        text-align: center;
-        border: 1px solid rgba(255, 255, 255, 0.2);
-        transition: transform 0.3s ease;
-      }
-
-      .image-card:hover {
-        transform: scale(1.05);
-      }
-
-      .image-card img {
-        width: 100%;
-        max-width: 150px;
-        height: auto;
-        border-radius: 8px;
-        margin-bottom: 10px;
-      }
-
-      .marquee-container {
-        background: rgba(255, 255, 255, 0.2);
-        border-radius: 10px;
-        margin: 30px 0;
-        overflow: hidden;
-        animation: fadeInUp 1s ease-out 1.5s both;
-      }
-
-      marquee {
-        padding: 15px;
-        font-size: 1.2em;
-        font-weight: bold;
-        background: linear-gradient(90deg, #ff6b6b, #4ecdc4, #45b7d1, #96ceb4);
-        background-size: 300% 300%;
-        animation: gradientShift 3s ease infinite;
-        -webkit-background-clip: text;
-        background-clip: text;
-        color: transparent;
-      }
-
-      .features-list {
-        text-align: left;
-        max-width: 500px;
-        margin: 0 auto;
-        animation: fadeInUp 1s ease-out 1.8s both;
-      }
-
-      .features-list ul {
-        list-style: none;
-        padding: 0;
-      }
-
-      .features-list li {
-        background: rgba(255, 255, 255, 0.1);
-        margin: 10px 0;
-        padding: 15px;
-        border-radius: 8px;
-        border-left: 4px solid #4ecdc4;
-        transition: all 0.3s ease;
-      }
-
-      .features-list li:hover {
-        background: rgba(255, 255, 255, 0.2);
-        transform: translateX(10px);
-      }
-
-      .features-list li::before {
-        content: "✓ ";
-        color: #4ecdc4;
-        font-weight: bold;
-        margin-right: 10px;
-      }
-
-      @keyframes fadeInUp {
-        from {
-          opacity: 0;
-          transform: translateY(30px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-
-      @keyframes gradientShift {
-        0% {
-          background-position: 0% 50%;
-        }
-        50% {
-          background-position: 100% 50%;
-        }
-        100% {
-          background-position: 0% 50%;
-        }
-      }
-
-      .back-to-top {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        background: rgba(255, 255, 255, 0.2);
-        color: white;
-        border: none;
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        font-size: 20px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        backdrop-filter: blur(10px);
-      }
-
-      .back-to-top:hover {
-        background: rgba(255, 255, 255, 0.3);
-        transform: translateY(-5px);
-      }
-
-      @media (max-width: 768px) {
-        h1 {
-          font-size: 2em;
-        }
-        .container {
-          padding: 20px 10px;
-        }
-        .nav-links a {
-          display: block;
-          margin: 10px 0;
-        }
-      }
-    </style>
+    <title>Page 2</title>
   </head>
   <body>
-    <div class="container">
-      <h1>🎉 Welcome to Page 2!</h1>
-      <h2>You've successfully navigated using HTML hyperlinks!</h2>
-
-      <div class="welcome-box">
-        <p>
-          This is the second page referenced in <strong>Question 4</strong> of
-          your HTML5 assignment. This page demonstrates successful hyperlink
-          navigation between HTML pages.
-        </p>
-      </div>
-
-      <div class="marquee-container">
-        <marquee behavior="scroll" direction="right"
-          >🚀 This is another marquee example moving right! HTML5 Assignment
-          Demo 🚀</marquee
-        >
-      </div>
-
-      <div class="nav-links">
-        <a href="assignment.html">← Back to Main Assignment</a>
-        <a href="#">View Features</a>
-        <a href="#">Image Gallery</a>
-      </div>
-
-      <div class="image-gallery" id="gallery">
-        <div class="image-card">
-          <img
-            src="https://via.placeholder.com/150x150?text=HTML5"
-            alt="HTML5 Logo"
-          />
-          <p>HTML5 Structure</p>
-        </div>
-        <div class="image-card">
-          <img
-            src="https://via.placeholder.com/150x150?text=CSS3"
-            alt="CSS3 Logo"
-          />
-          <p>CSS3 Styling</p>
-        </div>
-        <div class="image-card">
-          <img
-            src="https://via.placeholder.com/150x150?text=JS"
-            alt="JavaScript Logo"
-          />
-          <p>JavaScript Interactivity</p>
-        </div>
-      </div>
-
-      <div class="welcome-box" id="features">
-        <h3>🌟 Page Features Demonstrated:</h3>
-        <div class="features-list">
-          <ul>
-            <li>Hyperlink navigation between pages</li>
-            <li>Animated marquee text</li>
-            <li>Responsive image gallery</li>
-            <li>CSS3 animations and transitions</li>
-            <li>Modern gradient backgrounds</li>
-            <li>Interactive hover effects</li>
-            <li>Mobile-responsive design</li>
-            <li>Smooth scrolling navigation</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="welcome-box">
-        <h3>📚 Assignment Context</h3>
-        <p>
-          This page serves as the destination for the hyperlink created in
-          <strong>Question 4</strong>, which also includes:
-        </p>
-        <ul style="text-align: left; display: inline-block">
-          <li>Marquee text demonstration</li>
-          <li>Image embedding example</li>
-          <li>Inter-page navigation</li>
-        </ul>
-      </div>
-
-      <div class="nav-links">
-        <a href="assignment.html">🏠 Return to Assignment Homepage</a>
-      </div>
-
-      <footer style="margin-top: 50px; opacity: 0.8; font-size: 0.9em">
-        <p>© 2024 HTML5 Assignment - Demonstrating hyperlink functionality</p>
-        <p>Created as part of Question 4 requirements</p>
-      </footer>
-    </div>
-
-    <button
-      class="back-to-top"
-      onclick="window.scrollTo({top: 0, behavior: 'smooth'})"
-      title="Back to top"
-    >
-      ↑
-    </button>
-
-    <script>
-      // Show/hide back to top button
-      window.addEventListener("scroll", function () {
-        const backToTop = document.querySelector(".back-to-top");
-        if (window.pageYOffset > 300) {
-          backToTop.style.display = "block";
-        } else {
-          backToTop.style.display = "none";
-        }
-      });
-
-      // Smooth scrolling for anchor links
-      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
-        anchor.addEventListener("click", function (e) {
-          e.preventDefault();
-          const target = document.querySelector(this.getAttribute("href"));
-          if (target) {
-            target.scrollIntoView({
-              behavior: "smooth",
-            });
-          }
-        });
-      });
-
-      // Add some interactivity
-      console.log("🎉 Welcome to Page 2! Hyperlink navigation successful!");
-
-      // Simple greeting animation
-      setTimeout(() => {
-        console.log(
-          "✨ Page 2 loaded successfully for HTML5 Assignment Question 4"
-        );
-      }, 1000);
-    </script>
+    <h1>This is Page 2</h1>
+    <p>You have successfully navigated to the second page!</p>
+    <a href="q4.html">Go back to Main Page</a>
   </body>
 </html>
